# rapperrok

./: .env.example  .gitignore  .pr-description.md  API_COVERAGE_REPORT.md  API_FEATURE_MATRIX.md  API_STATUS.md  CHANGELOG.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONTRIBUTING.md  CREATE_PR.md  FIXES_APPLIED.md  LICENSE  MERGE_INSTRUCTIONS.md  Makefile  QUICKSTART.md  README.md  mkdocs.yml  pyproject.toml  test_connection.py
.github/workflows/: claude-code-review.yml
docs/: API_REFERENCE.md  ENDPOINTS.md  MODELS.md  README.md  changelog.md  configuration.md  contributing.md  examples.md  getting-started.md  index.md  license.md  quickstart.md
docs/api/: client.md  common.md  exceptions.md  nuro.md  overview.md  producer.md  suno.md  webhooks.md
docs/guides/: advanced.md  basic-usage.md  credits.md  error-handling.md  nuro.md  producer.md  suno.md  webhooks.md
docs/tutorials/: batch-generation.md  first-song.md  personas.md  stems.md  webhook-server.md
examples/: 01_basic_usage.py  02_advanced_suno.py  03_producer_operations.py  04_webhook_integration.py  README.md
src/rapperrok/: __init__.py
src/rapperrok/common/: __init__.py  base.py  exceptions.py  models.py  utils.py
src/rapperrok/nuro/: __init__.py  client.py  models.py
src/rapperrok/producer/: __init__.py  client.py  models.py
src/rapperrok/suno/: __init__.py  client.py  models.py
src/rapperrok/webhooks/: __init__.py  handler.py  models.py
tests/: __init__.py  conftest.py
tests/unit/: test_producer_client.py  test_suno_client.py  test_utils.py  test_webhook_handler.py
